<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@color/blue_button"
    android:dividerPadding="20dp"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="How would you like to add your item?"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="25sp">
    </TextView>

    <Button
        android:id="@+id/scan_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="Scan barcode"
        android:textSize="25sp"></Button>

    <Button
        android:id="@+id/input_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="Input manually"
        android:textSize="25sp"
        android:backgroundTint="@color/grey_button">
    </Button>

    <Button
        android:id="@+id/cancel_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="70dp"
        android:text="Cancel"
        android:textSize="25sp"
        android:backgroundTint="@color/grey_button">
    </Button>


</LinearLayout>