...
            android:focusable="true"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/blue_button"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20sp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/grey_button"
            android:clickable="true"
            android:focusable="true"
...
