<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_master_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:orientation="vertical">

    <TextView
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:background="@color/light_purple"
                    android:paddingVertical="10dp">
                </EditText>
...
                    android:paddingVertical="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/black">
                </TextView>

                <EditText
                    android:id="@+id/edit_value"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="$0.00"
                    android:textSize="25sp"
                    android:background="@color/light_purple"
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="0">

        <Button
            android:id="@+id/edit_cancel"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/edit_confirm"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIRM"
            android:backgroundTint="@color/light_green"
            android:textColor="@color/black"
...
